# neuron-tracker-simulation

./: .gitignore  README.md  docker-compose-old.yaml  docker-compose.yaml  docker-compose.yml  simulation-a1-l1-deployment.yaml  write_docker_compose.py
app/: pyproject.toml
app/source/: main.py  main_gcs.py
app/source/config/: _recordings_params.yaml  base_signal_drift_dict.yaml  default_recordings_params.yaml  fast_nonrigid_drift_dict.yaml  fast_rigid_drift_dict.yaml  neuronexus_recordings_params.yaml  neuronexus_templates_params.yaml  recordings_params.yaml  session_sequence_params.yaml  simulation_params.yaml  slow_nonrigid_drift_dict.yaml  slow_rigid_drift_dict.yaml  templates_params.yaml  tetrode_recordings_params.yaml  tetrode_templates_params.yaml
kubernetes/: persistent-volume-claim.yaml  persistent-volume.yaml  simulation-a1-l1-cm0-configmap.yaml  simulation-a1-l1-deployment.yaml  simulation-a1-l1-service.yaml  simulation-a1-l23-deployment.yaml  storage-class.yaml
logs/: command_for_deployment.md  commands.md
source/: pyproject.toml
source/source/: main.py
source/source/config/: __init__.py  recordings_params.yaml  session_sequence_params.yaml  slow_rigid_drift_dict.yaml  template_params.yaml
